# xbee-python

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
docs/: xbee_emulator.md
src/: __init__.py
src/xbee/: .env.sample  XBee.py  XBeeEmulator.py  XBeeSimulation.py  XBeeTester.py  Xbee.py  XbeeTester.py  __init__.py
src/xbee/frames/: __init__.py  x90.py
src/xbee/utils/: FakeSerial.py  MqttClient.py  __init__.py
tests/: transmit_test.py  txrx1.py  txrx2.py  xbee_tester_test.py
tests/old/: transmit_test.py  transmit_test2.py  vehicle.py
