[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbee-python"
version = "2.0.1a"
description = "XBee serial communication library"
requires-python = ">=3.8"
authors = [
    { name = "Joshua Ho" },
    { name = "Olena Molla" }
]
dependencies = [
  "serial-io>=0.1.0a",
  "logger>=0.1.0a",
  "pyserial==3.5"
]

[tool.setuptools.packages.find]
where = ["src"]