[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbee-python"
version = "2.0.2"
description = "XBee serial communication library"
requires-python = ">=3.8"
authors = [
    { name = "Joshua Ho" },
    { name = "Olena Molla" }
]
dependencies = [
  "serial-io>=0.1.0a",
  "logger>=0.1.0a",
  "pyserial==3.5",
  "paho-mqtt==2.1.0",
  "python-dotenv==1.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]