[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbee-python"
version = "2.1.0"
description = "XBee serial communication library"
requires-python = ">=3.8"
authors = [
    { name = "Joshua Ho" },
    { name = "Olena Molla" }
]
dependencies = [
  "pyserial==3.5",
  "serial-io @ git+https://github.com/ngcp-project/serial-io.git@849bbe5",
  "logger @ git+https://github.com/ngcp-project/logger.git@3f0a41e",
  "paho-mqtt==2.1.0",
  "python-dotenv==1.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]